pong/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong
  labels:
    app: pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
  template:
    metadata:
      labels:
        app: pong
    spec:
      containers:
      - image: motomark/pong
        name: pong
        ports: 
        - containerPort: 9700
---
kind: Service
apiVersion: v1
metadata:
  name: pong-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: pong
  ports:
  - name: http
    port: 9700
    protocol: TCP
    targetPort: 9700
